# behaviarium

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-dlc-windows.txt
app/: streamlit_app.py
configs/: core.yml
configs/projects/: oft_demo.yml  pt_social.yml
src/behaviarium/: __init__.py  __main__.py  bsoid_reconstruct.py  class_parser.py  cli.py  config.py  dlc_io.py  identity.py  manifest.py  paths.py  pipeline.py  registry.py  reorg.py  roi.py  runner.py  stage.py  video.py
src/behaviarium/stages/: __init__.py  boundary.py  bsoid.py  chamber.py  dlc.py  export.py  ingest.py  mask.py  postprocess.py  rotate.py  stats.py
src/behaviarium/stats/: __init__.py  significance.py
tests/: conftest.py  test_boundary.py  test_bsoid.py  test_chamber.py  test_config.py  test_discovery.py  test_dlc.py  test_export.py  test_ingest.py  test_manifest.py  test_migration.py  test_pipeline.py  test_postprocess.py  test_project.py  test_reorg.py  test_roi.py  test_stats.py  test_tagging.py
