[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "behaviarium"
version = "0.0.0"
description = "Orchestration/control-plane layer over OpenCV, DeepLabCut, and B-SOiD for mouse behavioral video pipelines."
readme = "README.md"
license = { file = "LICENSE" }
# Floor is 3.10. PRODUCTION (Windows + DLC 2.3.10 / TF 2.10) must run on Python 3.10
# (TF 2.10 supports 3.7-3.10). Mac dev currently runs 3.12. TF is not a Phase 0 dependency,
# so the floor keeps `pip install -e .` working on dev machines while documenting the prod pin.
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "streamlit>=1.30",
    "opencv-python>=4.8",
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=12.0",
    "scipy>=1.10",
]
# NOTE: TensorFlow / DeepLabCut are deliberately NOT base dependencies — the real DLC engine
# imports them lazily. Base install must keep working on Mac (Python 3.12). The Windows DLC
# stack is pinned separately in requirements-dlc-windows.txt (Python 3.10 / TF 2.10 / DLC 2.3.10).

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
behaviarium = "behaviarium.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
